--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -19,6 +19,7 @@
         <module>springcloud-consumer-dept-feign</module>
         <module>springcloud-consumer-hystrix-dashboard</module>
         <module>springcloud-zuul-9527</module>
+        <module>springcloud-config-server-3344</module>
     </modules>
 
     <properties>
